# HPC_Project

./: .gitignore  CMakeLists.txt
include/: geneticOptimization.hpp  testingFunctions.hpp
src/: main.cpp  testingFunctions.cpp
